--- a/Slider/slider.css
+++ b/Slider/slider.css
@@ -1,4 +1,4 @@
-bodya {
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -39,7 +39,10 @@ bodya {
   height: 400px;
   aspect-ratio: 9/16;
   object-fit: cover;
+
 }
+
+
 .slide h3 {
   font-size: 20px;
   color: rgba(0, 0, 0, 0.5);
