--- a/React App/ReactRouter/src/App.css
+++ b/React App/ReactRouter/src/App.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   display: flex;
   justify-content: space-around;
   gap: 1.5rem;
@@ -15,4 +15,10 @@
 }
 .nav-link:hover {
   color: #007bff;
+} */
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
