--- a/React App/Custom UI Library/src/components/Card/Card.css
+++ b/React App/Custom UI Library/src/components/Card/Card.css
@@ -1,20 +1,21 @@
-.card{
-    background-color:#ffffff ;
-    border-radius:12px ;
-    padding:24px;
+.card {
+  background-color: #ffffff;
+  border-radius: 12px;
+  padding: 24px;
 }
 
-.card-default{
-    border: 1px solid #e5e5e5;
-    box-shadow:0 1px 2px 0 rgba(0, 0, 0, 0.05);;
+.card-default {
+  border: 1px solid #e5e5e5;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
-.card-elevated{
-    border: none;
-    box-shadow:0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+.card-elevated {
+  border: none;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
-.card-outlined{
-    border:2px solid #e5e5e5;
-    box-shadow: none;
+.card-outlined {
+  border: 2px solid #e5e5e5;
+  box-shadow: none;
 }
