--- a/React App/Custom UI Library/src/layouts/DocsLayout/DocsLayout.css
+++ b/React App/Custom UI Library/src/layouts/DocsLayout/DocsLayout.css
@@ -22,29 +22,30 @@
   font-size: 1.25rem;
 }
 
-.docs-nav{
-    padding:16px;
-    display:flex;
-    flex-direction: column;
-    gap:4px;
+.docs-nav {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
-.docs-nav-item{
-    text-align: left;
-    padding:16px;
-    background: none;
-    border:none;
-    color:#525252;
-    font-size: 0.9375rem;
-    font-weight: 500;
-    cursor: pointer;
+.docs-nav-item {
+  text-align: left;
+  padding: 16px;
+  background: none;
+  border: none;
+  color: #525252;
+  font-size: 0.9375rem;
+  font-weight: 500;
+  cursor: pointer;
+  text-decoration: none;
 }
-.docs-nav-item:hover{
-    background-color: #fafafa;
-    color:#0a0a0a;
+.docs-nav-item:hover {
+  background-color: #fafafa;
+  color: #0a0a0a;
 }
-.docs-nav-item-active{
-    background-color:#eff6ff ;
-    color: #2563eb;
+.docs-nav-item-active {
+  background-color: #eff6ff;
+  color: #2563eb;
 }
 
 .docs-main {
